Fix NHJ name wrapping at hyphen. Closes #171.

--- a/less/app.less
+++ b/less/app.less
@@ -273,30 +273,6 @@ header {
 	}
 }
 
-// Cube ad
-.adwrapper {
-	display: none;
-    zoom: 1;
-    padding: 0 0 12px 0;
-
-    .sponsor300 {
-        overflow: hidden;
-        width: 300px;
-        margin: 0 auto;
-    }
-
-    p {
-        margin: 6px 0 0 0;
-        font-size: 11px;
-        color: #999;
-
-        &.left { float: left; }
-        &.right { float: right; }
-        a { color: #6d8ac4; }
-    }
-}
-
-
 // Content
 .main-content {
 
@@ -839,6 +815,10 @@ header {
             margin-top: 50px;
         }
 	}
+
+    .nowrap {
+        white-space: nowrap;
+    }
 }
 
 // Footer
